Change link hover color

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -63,11 +63,15 @@ h1 {
 }
 
 .intro-header-impressum {
-    padding-top: 100px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
-    text-align: left;
-    color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
-    background-size: cover;
+  padding-top: 100px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+  padding-bottom: 50px;
+  text-align: left;
+  color: #f8f8f8;
+  background: url(../img/intro-bg.jpg) no-repeat center center;
+  background-size: cover;
 }
 
+.lead a:hover {
+  color: #84b4db;
+  text-decoration: none;
+}
