--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -128,37 +128,7 @@ tags:
     </div>
     <!-- /.banner -->
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#home">Startseite</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">Über die Kanzlei</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#leistungen">Schwerpunkte</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#kontakt">Kontakt</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#impressum">Impressum</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold 2014. All Rights Reserved</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <%= partial "footer-menu" %>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
