--- a/source/navigation.erb
+++ b/source/navigation.erb
@@ -15,16 +15,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#kanzlei">Über die Kanzlei</a>
+                        <a href="/#kanzlei">Über die Kanzlei</a>
                     </li>
                     <li>
-                        <a href="#schwerpunkte">Schwerpunkte</a>
+                        <a href="/#schwerpunkte">Schwerpunkte</a>
                     </li>
                     <li>
-                        <a href="#kontakt">Kontakt</a>
+                        <a href="/#kontakt">Kontakt</a>
                     </li>
                     <li>
-                        <a href="/impressum.html">Impressum</a>
+                        <a href="/impressum">Impressum</a>
                     </li>
                 </ul>
             </div>
