--- a/source/footer-menu.erb
+++ b/source/footer-menu.erb
@@ -5,23 +5,23 @@
             <div class="col-lg-12">
                 <ul class="list-inline">
                     <li>
-                        <a href="#home">Startseite</a>
+                        <a href="http://www.ra-huxhold.de">Startseite</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">Über die Kanzlei</a>
+                        <a href="/#kanzlei">Über die Kanzlei</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#leistungen">Schwerpunkte</a>
+                        <a href="/#schwerpunkte">Schwerpunkte</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#kontakt">Kontakt</a>
+                        <a href="/#kontakt">Kontakt</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#impressum">Impressum</a>
+                        <a href="/impressum">Impressum</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold 2014. All Rights Reserved</p>
