--- a/source/footer-menu.erb
+++ b/source/footer-menu.erb
@@ -24,7 +24,7 @@
                         <a href="/impressum">Impressum</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold 2014. All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold <%= Date.today.year %>. All Rights Reserved</p>
             </div>
         </div>
     </div>
