--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -87,7 +87,7 @@ tags:
                         Markt 6<br>
                         51103 Köln<br>
                         Telefon: 0221 / 96 23 14 65<br>
-                        E-Mail: <%= mail_to("info@ra-huxhold.de") %>
+                        E-Mail: <%= obfuscated_mail_to(data.email.contact.email_obfuscated, data.email.contact.email_obfuscated) %>
                     </address>
                     </p>
                 </div>
