--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -86,8 +86,8 @@ tags:
                         Rechtsanwalt Christian Huxhold<br>
                         Markt 6<br>
                         51103 Köln<br>
-                        Telefon: 0221 / 96 23 14 65<br>
-                        E-Mail: <%= mail_to("info@ra-huxhold.de") %>
+                        <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br>
+                        <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
                     </address>
                     </p>
                 </div>
