Add icons to imprint

--- a/source/impressum.html.erb
+++ b/source/impressum.html.erb
@@ -15,8 +15,8 @@ tags: Rechtsanwalt, Christian, Huxhold, Impressum
           Markt 6<br />
           51103 Köln<br /><br />
 
-          Tel.: 0221-96231465<br />
-          E-Mail: <%= mail_to("info@ra-huxhold.de") %>
+          <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br />
+          <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
         </address>
       </p>
 
@@ -29,9 +29,9 @@ tags: Rechtsanwalt, Christian, Huxhold, Impressum
           Riehler Straße 30<br />
           50668 Köln<br /><br />
 
-          Tel. 0221-97 30 10-0<br />
-          Fax. 0221-97 30 10-50<br />
-          E-Mail: <%= mail_to("kontakt@rak-koeln.de") %>
+          <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 97 30 10-0<br />
+          Fax: 0221 / 97 30 10-50<br />
+          <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("kontakt@rak-koeln.de") %>
         </address>
       </p>
 
