--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -87,7 +87,7 @@ tags:
                         Markt 6<br>
                         51103 Köln<br>
                         <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br>
-                        <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
+                        <i class="glyphicon glyphicon-envelope"></i>&nbsp; <a href="mailto:info@ra-huxhold.de">info@<span class=”displaynone”>null</span>ra-huxhold.de</a>
                     </address>
                     </p>
                 </div>
