Add new menu item

--- a/source/navigation.erb
+++ b/source/navigation.erb
@@ -26,6 +26,9 @@
                     <li>
                         <a href="/impressum">Impressum</a>
                     </li>
+                    <li>
+                        <a href="/datenschutz">Datenschutzbestimmungen &amp; Haftung</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
