Add new menu item

--- a/source/footer-menu.erb
+++ b/source/footer-menu.erb
@@ -23,8 +23,12 @@
                     <li>
                         <a href="/impressum">Impressum</a>
                     </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="/datenschutz">Datenschutzbestimmungen &amp; Haftung</a>
+                    </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold <%= Date.today.year %>. All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold <%= Date.today.year %>. All Rights Reserved.</p>
             </div>
         </div>
     </div>
