Insert new picture

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -46,7 +46,7 @@ tags:
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Schwerpunkte</h2>
@@ -62,7 +62,7 @@ tags:
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/gesetze_sw.png" alt="Gesetzesbuecher">
                 </div>
             </div>
 
