--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,7 @@ tags:
                             <li>Zulassung als Rechtsanwalt bei der Rechtsanwaltskammer Köln im Sommer 2014</li>
                             <li>Tätigkeit als Justiziar bei der Firma Cargo Records GmbH in Wuppertal</li>
                             <li>Mitglied im Deutschen AnwaltVerein sowie im Kölner AnwaltVerein</li>
-                            <img class="img-responsive logo" src="img/davmitgl4c.jpg" alt="Mitglied im Deutschen AnwaltVerein (Logo)">
+                            <img class="img-responsive logo" src="img/dav_mitglieder_sw.png" alt="Mitglied im Deutschen AnwaltVerein (Logo)">
                         </ul>
                     </p>
                 </div>
