--- a/source/navigation.erb
+++ b/source/navigation.erb
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.ra-huxhold.de">Rechtsanwalt Huxhold</a>
+                <a class="navbar-brand" href="/">Rechtsanwalt Huxhold</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
