Add description and published status

--- a/source/impressum.html.erb
+++ b/source/impressum.html.erb
@@ -1,5 +1,7 @@
 ---
 title: Rechtsanwalt Christian Huxhold - Impressum
+description: Impressum für die Webseite von Rechtsanwalt Christian Huxhold
+published: true
 tags: Rechtsanwalt, Christian, Huxhold, Impressum
 ---
 
