--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,10 +18,10 @@
     <%= javascript_include_tag  "all" %>
 
     <!-- Bootstrap Core CSS -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="stylesheets/landing-page.css" rel="stylesheet">
+    <link href="/stylesheets/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
