--- a/source/stylesheets/landing-page.css
+++ b/source/stylesheets/landing-page.css
@@ -40,6 +40,7 @@ h6 {
     position: relative;
     padding-top: 20%;
     padding-bottom: 20%;
+    margin-top: -300px;
 }
 
 .intro-message > h1 {
