--- a/source/datenschutz.html.erb
+++ b/source/datenschutz.html.erb
@@ -8,7 +8,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Datenschutzbestimmungen, Haftung
 <div class="intro-header-impressum">
   <div class="container">
     <div class="col-lg-10 col-lg-offset-2 col-sm-10">
-      <h2 class="section-heading">Datenschutzbestimmungen &amp; Haftung</h2>
+      <h2 class="section-heading">Datenschutz</h2>
       <p class="lead">Wir legen Wert auf den Schutz personenbezogener Daten. Sämtliche Web-Aktivitäten der Rechtsanwaltskanzlei Huxhold erfolgen auf der Grundlage der Vorgaben der Europäischen Union und den Gesetzen zum Datenschutz und zur Datensicherheit der Bundesrepublik Deutschland.</p>
 
       <p class="lead">Personenbezogene Daten werden allein zu von Ihnen bestimmten Zwecken genutzt oder zu Zwecken, die auf der Webseite ausdrücklich angegeben werden. Die Verarbeitung und Nutzung Ihrer personenbezogenen Daten erfolgt unter Beachtung der deutschen Datenschutzbestimmungen. Ihre personenbezogenen Daten werden vertraulich behandelt und nicht an Dritte weitergegeben, es sei denn, Sie haben dem schriftlich oder elektronisch zugestimmt oder wir sind dazu gesetzlich verpflichtet. Hierzu treffen wir die dem Stand der Technik entsprechenden Maßnahmen, um Ihre Daten bei uns gegen Verlust oder Missbrauch zu schützen. Wir weisen jedoch darauf hin, dass per E-Mail mit unverschlüsseltem Inhalt übermittelte personenbezogene Daten von unbefugten Dritten mitgelesen werden können. Auf die Risiken einer Übermittlung per E-Mail haben wir keinen Einfluss. Sie haben jederzeit das Recht, Auskunft über Ihre gespeicherten Daten zu erhalten und ggf. Berichtigung oder Löschung zu verlangen. Hierzu senden Sie bitte eine Mail an <%= mail_to("info@ra-huxhold.de") %>.</p>
