--- a/source/footer-menu.erb
+++ b/source/footer-menu.erb
@@ -9,7 +9,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="/#kanzlei">Über die Kanzlei</a>
+                        <a href="/#kanzlei">Die Kanzlei</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
@@ -25,7 +25,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="/datenschutz">Datenschutzbestimmungen &amp; Haftung</a>
+                        <a href="/datenschutz">Datenschutz</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; Kanzlei Huxhold <%= Date.today.year %>. All Rights Reserved.</p>
