--- a/source/navigation.erb
+++ b/source/navigation.erb
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/#kanzlei">Über die Kanzlei</a>
+                        <a href="/#kanzlei">Die Kanzlei</a>
                     </li>
                     <li>
                         <a href="/#schwerpunkte">Schwerpunkte</a>
@@ -27,7 +27,7 @@
                         <a href="/impressum">Impressum</a>
                     </li>
                     <li>
-                        <a href="/datenschutz">Datenschutzbestimmungen &amp; Haftung</a>
+                        <a href="/datenschutz">Datenschutz</a>
                     </li>
                 </ul>
             </div>
