--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -52,12 +52,11 @@ tags:
                     <h2 class="section-heading">Schwerpunkte</h2>
                     <p class="lead">Rechtsanwalt Huxhold vertritt Sie gerichtlich und außergerichtlich in den Bereichen:
                         <ul class="lead">
-                        <li>allgemeines Zivilrecht</li>
-                        <li>Vertragsrecht</li>
-                        <li>Verkehrsrecht</li>
+                        <li>Zivilrecht (Vertrags-, Miet- und Versicherungsrecht)</li>
+                        <li>Verkehrsrecht, Ordnungswidrigkeiten</li>
                         <li>Arbeitsrecht</li>
-                        <li>Familienrecht</li>
-                        <li>Musik- und Urheberrecht</li>
+                        <li>Urheber- und Medienrecht</li>
+                        <li>Musikrecht</li>
                     </ul>
                     </p>
                 </div>
