Add tags for SEO

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Willkommen auf der Seite von Christian Huxhold
-tags:
+title: Willkommen auf der Webseite von Rechtsanwalt Christian Huxhold
+tags: Rechtsanwalt, Christian, Huxhold, Anwalt, Köln, Cologne, Kalk, Zivilrecht, Vertragsrecht, Mietrecht, Versicherungsrecht, Verkehrsrecht, Ordnungswidrigkeiten, Arbeitsrecht, Urheberrecht, Medienrecht, Musikrecht
 ---
 
 <%= partial "navigation" %>
