Convert all the Umlaute

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Willkommen auf der Webseite von Rechtsanwalt Christian Huxhold
-tags: Rechtsanwalt, Christian, Huxhold, Anwalt, Köln, Cologne, Kalk, Zivilrecht, Vertragsrecht, Mietrecht, Versicherungsrecht, Verkehrsrecht, Ordnungswidrigkeiten, Arbeitsrecht, Urheberrecht, Medienrecht, Musikrecht
+tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilrecht, Vertragsrecht, Mietrecht, Versicherungsrecht, Verkehrsrecht, Ordnungswidrigkeiten, Arbeitsrecht, Urheberrecht, Medienrecht, Musikrecht
 ---
 
 <%= partial "navigation" %>
@@ -20,12 +20,12 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, Köln, Cologne, Kalk, Zivilrecht
                     <h2 class="section-heading">Christian Huxhold</h2>
                     <p class="lead">
                         <ul class="lead">
-                            <li>Studium an der Philipps-Universität Marburg</li>
+                            <li>Studium an der Philipps-Universit&auml;t Marburg</li>
                             <li>Referendariat beim Landgericht Aachen
-                            <li>Stationen beim Deutschen Bundestag in Berlin, bei der Sony Music Entertainment GmbH in München und der Kanzlei Schmitz &amp; Lehnen in Aachen</li>
-                            <li>Zulassung als Rechtsanwalt bei der Rechtsanwaltskammer Köln im Sommer 2014</li>
-                            <li>Tätigkeit als Justiziar bei der Firma Cargo Records GmbH in Wuppertal</li>
-                            <li>Mitglied im Deutschen AnwaltVerein sowie im Kölner AnwaltVerein</li>
+                            <li>Stationen beim Deutschen Bundestag in Berlin, bei der Sony Music Entertainment GmbH in M&uuml;nchen und der Kanzlei Schmitz &amp; Lehnen in Aachen</li>
+                            <li>Zulassung als Rechtsanwalt bei der Rechtsanwaltskammer K&ouml;ln im Sommer 2014</li>
+                            <li>T&auml;tigkeit als Justiziar bei der Firma Cargo Records GmbH in Wuppertal</li>
+                            <li>Mitglied im Deutschen AnwaltVerein sowie im K&ouml;lner AnwaltVerein</li>
                             <img class="img-responsive logo" src="img/dav_mitglieder_sw.png" alt="Mitglied im Deutschen AnwaltVerein (Logo)">
                         </ul>
                     </p>
@@ -50,7 +50,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, Köln, Cologne, Kalk, Zivilrecht
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Schwerpunkte</h2>
-                    <p class="lead">Rechtsanwalt Huxhold vertritt Sie gerichtlich und außergerichtlich in den Bereichen:
+                    <p class="lead">Rechtsanwalt Huxhold vertritt Sie gerichtlich und au&szlig;ergerichtlich in den Bereichen:
                         <ul class="lead">
                         <li>Zivilrecht (Vertrags-, Miet- und Versicherungsrecht)</li>
                         <li>Verkehrsrecht, Ordnungswidrigkeiten</li>
@@ -84,7 +84,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, Köln, Cologne, Kalk, Zivilrecht
                         <address class="lead">
                         Rechtsanwalt Christian Huxhold<br>
                         Markt 6<br>
-                        51103 Köln<br>
+                        51103 K&ouml;ln<br>
                         <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br>
                         <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
                     </address>
