Correct LinkedIn wording

--- a/source/header.erb
+++ b/source/header.erb
@@ -13,7 +13,7 @@
                                 <a href="https://www.xing.com/profile/Christian_Huxhold" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-xing fa-fw"></i> <span class="network-name">Xing</span></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/profile/view?id=342561371&trk=nav_responsive_tab_profile" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://www.linkedin.com/profile/view?id=342561371&trk=nav_responsive_tab_profile" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
                             </li>
                         </ul>
                     </div>
