Add tags for SEO

--- a/source/impressum.html.erb
+++ b/source/impressum.html.erb
@@ -2,7 +2,7 @@
 title: Rechtsanwalt Christian Huxhold - Impressum
 description: Impressum für die Webseite von Rechtsanwalt Christian Huxhold
 published: true
-tags: Rechtsanwalt, Christian, Huxhold, Impressum
+tags: Rechtsanwalt, Christian, Huxhold, Impressum, Anwalt, Köln, Cologne, Kalk, Rechtsanwaltskammer Köln
 ---
 
 <%= partial "navigation" %>
