Add tags for SEO

--- a/source/datenschutz.html.erb
+++ b/source/datenschutz.html.erb
@@ -1,6 +1,8 @@
 ---
-title: Rechtsanwalt Christian Huxhold - Datenschutzbestimmungen &amp; Haftung
-tags: Rechtsanwalt, Christian, Huxhold, Datenschutzbestimmungen, Haftung
+title: Rechtsanwalt Christian Huxhold - Datenschutz
+description: Datenschutzbestimmungen
+published: true
+tags: Rechtsanwalt, Christian, Huxhold, Datenschutz, Datenschutzbestimmungen, Haftung, deutsche Datenschutzbestimmungen, personenbezogene Daten, vertraulich, IP-Adresse  anonymisiert
 ---
 
 <%= partial "navigation" %>
