Add target: blank

--- a/source/datenschutz.html.erb
+++ b/source/datenschutz.html.erb
@@ -20,7 +20,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Datenschutz, Datenschutzbestimmungen, Ha
       <p class="lead">Die auf dieser Webseite angebotenen Inhalte und die darin wiedergegebenen Meinungen dienen nur der Darstellung der Rechtsanwaltskanzlei Huxhold und stellen keine Rechtsberatung dar. Alle Angaben auf dieser Webseite sind sorgfältig geprüft worden. Trotzdem kann es sein, dass sich Daten und Fakten geändert haben. Eine Haftung oder Garantie für die Aktualität, Richtigkeit und Vollständigkeit der zur Verfügung gestellten Informationen kann daher nicht übernommen werden. Gleiches gilt für andere Webseiten, auf die mittels Hyperlink verwiesen wird. Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber alleine verantwortlich.</p>
 
       <p class="lead">Bildnachweise:<br />
-        <%= link_to("Death to the Stock Photo", "http://join.deathtothestockphoto.com") %><br />
+        <%= link_to("Death to the Stock Photo", "http://join.deathtothestockphoto.com", html_options = {target: "_blank"}) %><br />
         <%= mail_to("info@ra-huxhold.de", "C. Huxhold") %>
       </p>
 
