--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilr
                             <li>Zulassung als Rechtsanwalt bei der Rechtsanwaltskammer K&ouml;ln im Sommer 2014</li>
                             <li>T&auml;tigkeit als Justiziar bei der Firma Cargo Records GmbH in Wuppertal</li>
                             <li>Mitglied im Deutschen AnwaltVerein sowie im K&ouml;lner AnwaltVerein</li>
-                            <img class="img-responsive logo" src="img/dav_mitglieder_sw.png" alt="Mitglied im Deutschen AnwaltVerein (Logo)">
+                            <img class="img-responsive logo" src="img/dav_mitgl_sw.png" alt="Mitglied im Deutschen AnwaltVerein (Logo)">
                         </ul>
                     </p>
                 </div>
