--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -86,6 +86,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilr
                         Markt 6<br>
                         51103 K&ouml;ln<br>
                         <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br>
+                        Fax: 03222 / 40 83 690<br>
                         <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
                     </address>
                     </p>
