--- a/source/impressum.html.erb
+++ b/source/impressum.html.erb
@@ -18,6 +18,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Impressum, Anwalt, Köln, Cologne, Kalk,
           51103 K&ouml;ln<br /><br />
 
           <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br />
+          Fax: 03222 / 40 83 690<br>
           <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
         </address>
       </p>
