--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -91,7 +91,6 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilr
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <!-- <img class="img-responsive" src="img/phones.png" alt=""> -->
                 </div>
             </div>
 
@@ -129,8 +128,4 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilr
 
     <%= partial "footer-menu" %>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <%= partial "javascript" %>
