Insert new JS partial

--- a/source/impressum.html.erb
+++ b/source/impressum.html.erb
@@ -63,3 +63,5 @@ tags: Rechtsanwalt, Christian, Huxhold, Impressum, Anwalt, Köln, Cologne, Kalk,
 </div>
 
 <%= partial "footer-menu" %>
+
+<%= partial "javascript" %>
