--- a/source/datenschutz.html.erb
+++ b/source/datenschutz.html.erb
@@ -30,3 +30,5 @@ tags: Rechtsanwalt, Christian, Huxhold, Datenschutz, Datenschutzbestimmungen, Ha
 </div>
 
 <%= partial "footer-menu" %>
+
+<%= partial "javascript" %>
