Use Awesome Font icons

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -85,9 +85,9 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilr
                         Rechtsanwalt Christian Huxhold<br>
                         Markt 6<br>
                         51103 K&ouml;ln<br>
-                        <i class="glyphicon glyphicon-phone-alt"></i>&nbsp; 0221 / 96 23 14 65<br>
-                        Fax: 03222 / 40 83 690<br>
-                        <i class="glyphicon glyphicon-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
+                        <i class="fa fa-phone"></i>&nbsp; 0221 / 96 23 14 65<br>
+                        <i class="fa fa-fax"></i>&nbsp; 03222 / 40 83 690<br>
+                        <i class="fa fa-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
                     </address>
                     </p>
                 </div>
