Add space before telephone number

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -85,7 +85,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilr
                         Rechtsanwalt Christian Huxhold<br>
                         Markt 6<br>
                         51103 K&ouml;ln<br>
-                        <i class="fa fa-phone"></i>&nbsp; 0221 / 96 23 14 65<br>
+                        <i class="fa fa-phone"></i>&nbsp; &nbsp;0221 / 96 23 14 65<br>
                         <i class="fa fa-fax"></i>&nbsp; 03222 / 40 83 690<br>
                         <i class="fa fa-envelope"></i>&nbsp; <%= mail_to("info@ra-huxhold.de") %>
                     </address>
