--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,7 @@
 ---
 title: Willkommen auf der Webseite von Rechtsanwalt Christian Huxhold
-tags: Rechtsanwalt, Christian, Huxhold, Anwalt, K&ouml;ln, Cologne, Kalk, Zivilrecht, Vertragsrecht, Mietrecht, Versicherungsrecht, Verkehrsrecht, Ordnungswidrigkeiten, Arbeitsrecht, Urheberrecht, Medienrecht, Musikrecht
+description: Webseite des Rechtsanwalts Christian Huxhold
+tags: Rechtsanwalt, Christian, Huxhold, Anwalt, Köln, Cologne, Kalk, Zivilrecht, Vertragsrecht, Mietrecht, Versicherungsrecht, Verkehrsrecht, Ordnungswidrigkeiten, Arbeitsrecht, Urheberrecht, Medienrecht, Musikrecht
 ---
 
 <%= partial "navigation" %>
