--- a/source/datenschutz.html.erb
+++ b/source/datenschutz.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Rechtsanwalt Christian Huxhold - Datenschutz
-description: Datenschutzbestimmungen
+description: Datenschutzbestimmungen für die Webseite von Rechtsanwalt Christian Huxhold
 published: true
 tags: Rechtsanwalt, Christian, Huxhold, Datenschutz, Datenschutzbestimmungen, Haftung, deutsche Datenschutzbestimmungen, personenbezogene Daten, vertraulich, IP-Adresse  anonymisiert
 ---
