Use HTML entity for §

--- a/source/impressum.html.erb
+++ b/source/impressum.html.erb
@@ -48,7 +48,7 @@ tags: Rechtsanwalt, Christian, Huxhold, Impressum, Anwalt, Köln, Cologne, Kalk,
       </p>
 
       <p class="lead">
-        Umsatzsteuer-Identifikationsnummer nach § 27 a UStG: DE297250747
+        Umsatzsteuer-Identifikationsnummer nach &#xA7; 27 a UStG: DE297250747
       </p>
 
       <p class="lead">
